--- a/style.css
+++ b/style.css
@@ -1,110 +1,121 @@
-body{
+/*Осн.стили для всех блоков*/
+
+body {
     font-family: 'PT Sans', sans-serif;
 }
-.navbar{
-    display: flex;
-    align-items: center;
-    height: 160px;
-    padding: 0px;
-    justify-content: space-around;
-}
-.nav_img{
-    margin-left: 120px;
-}
-.nav_a{
-    display: flex;
-    justify-content: space-around;
-    margin-right: 120px;
+
+ul, li {
+    display: block;
+    padding: 0;
+    margin: 0;
 }
 
-
-.nav_a a{
-    margin-left: 40px;
-    margin-right: 40px;
-    font-size:22px;
-    font-weight:500;
-    color: #000;
-}
-.resume{
-    display: flex;
-    justify-content:space-around;
-    align-items: center;
-}
-.resume-text{
-    margin-bottom: 50px;
-}
-.header{
-    background: url("img/cool-background.png");
-}
-.spanchik{
-    margin-top: 50px;
-}
-.resume-img{
-    margin-bottom: 60px;
-}
-#img-span{
-    margin-right: 9px;
-    margin-left: 9px;
-}
-.item{
-    margin-left: 10px;
-    margin-top: 10px;
-}
-p{
-    font-size: 11pt;
-}
-.title{
-    padding-top: 30px;
-}
-.title-main{
-    text-align: center;
-}
-.title-text{
-    text-align: center;
-}
-.title__main{
-    text-align: center;
-    color: #95d9fb;
-}
-.title__text{
-    text-align: center;
-    color: #fff;
-}
-.title_{
-    background:#000;
-    margin-top: 45px;
-}
-.button{
-    font-family: 'PT Sans', sans-serif;
-    background: #e0413b;
-    color: #000;
-    text-transform: uppercase;
-    font-size: 16px;
+h1, h2, h3, h4, h5 {
     font-weight: 700;
-    border-radius: 5px;
-    width: 126px;
-    border: 0;
-    padding: 15px 0;
-    cursor:pointer;
+    color: #000
 }
-.form_input{
-    background: #fff;
-    font-size: 16px;
-    font-family: 'PT Sans', sans-serif;
-    border-radius: 5px;
-    width: 580px;
-    padding: 15px 0;
-    margin-right: 21px;
-    border: 0;
+
+h3 {
+    font-weight: 400;
 }
-.footer{
-    background: #000;
-}
-.footer-info{
-    color: #fff;
-    font-size: 16px;
+
+h2 {
     text-align: center;
-    padding: 50px 0 94px;
-    width: 184px;
-    margin: 0 auto;
 }
+
+
+.title {
+	padding-top: 100px;  /*отступ сверху*/
+	padding-bottom: 70px ;
+
+
+}
+
+.title_main {
+	font-size: 32px;
+	text-align: center;
+}
+
+.title_text {
+	font-size: 20px;
+    text-align: center;
+}
+p {
+	font-size: 20px;
+   
+}
+
+
+/* 1 экран */
+
+.header {
+
+	background-image: url(img/background.jpg)  ;
+	background-repeat: no-repeat;
+	background-size: 100% ; 
+	padding-bottom: 105px;
+}
+
+.logo {
+    margin-top:8px;
+}
+
+.menu {
+    margin-top:8px;
+}
+
+.menu__item {
+    margin: 0 57px;
+}
+
+.menu__item a {
+    font-size:22px;
+    font-weight:700;
+    color: #000;
+}
+
+.offer{
+	margin-top: 117px;
+}
+
+.offer__title {
+    font-size:32px;
+    margin-bottom: 15px;
+}
+
+.offer__intro {
+    font-size: 20px;
+    line-height: 1.3em;
+}
+
+.offer__text {
+    font-size: 16px;
+    margin-top:15px;
+    color: #555555;
+    width: 400px;
+}
+
+.icons__item {
+    margin-right:30px;
+}
+
+.icons__item a {
+    color: #000;
+    font-size: 42px;
+    transition: all 0.3s ease; /* плавная анимация*/
+}
+
+.icons__item a:hover {
+    text-decoration: none;
+    color: #ff4800;
+}  /* анимация при наведении на иконки*/
+
+.ipad{
+	display: block;
+	margin:60px auto 0;
+}
+
+/* 2 экран*/
+
+
+
